appId: com.m2dt.adler
name: boot
---
- runFlow:
    when:
      visible: "Development Build"
    commands:
      - tapOn:
          text: "http://.*:8081"
      - extendedWaitUntil:
          notVisible: "Development Build"
          timeout: 60000
- waitForAnimationToEnd:
    timeout: 8000
- repeat:
    times: 12
    commands:
      - runFlow:
          when:
            visible: "Continue"
          commands:
            - tapOn: "Continue"
            - waitForAnimationToEnd:
                timeout: 1500
      - runFlow:
          when:
            visible: "dev-tools"
          commands:
            - swipe:
                start: "50%, 35%"
                end: "50%, 95%"
            - waitForAnimationToEnd:
                timeout: 1500
      - waitForAnimationToEnd:
          timeout: 1500
- waitForAnimationToEnd:
    timeout: 2000
